Foram adicionados os arquivos da atividade de js

--- a/atividade.html
+++ b/atividade.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teste de js</title>
-    <link rel="stylesheet" href="css/styer.css">
 </head>
 <body>
   
    <h1>Hello word</h1> 
+   <link rel="stylesheet" href="syete.css">
 
-   <script src="js/atividade.js"></script>
+   <script src="js/atividade2.js"></script>
 </body>
-
+</html>
+</body>
 </html>
