--- a/atividade2.html
+++ b/atividade2.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teste de js</title>
-    <link rel="stylesheet" href="css/styer.css">
+    <link rel="stylesheet" href="atividade.css">
 </head>
 <body>
   
    <h1>Hello word</h1> 
 
-   <script src="js/atividade.js"></script>
+   <script src="js/atividade2.js"></script>
 </body>
 
 </html>
